--- a/src/content/handout/00-getting-started.mdx
+++ b/src/content/handout/00-getting-started.mdx
@@ -59,3 +59,25 @@ Web 开发并不困难和复杂。开发网站并**不像**高数和算法课需
 ![Hello web screenshot](../../assets/img/handouts/web-basic/00-getting-started/00-hello-web.png)
 
 恭喜！你已经完成了第一个网页的编写，是不是还挺简单的！
+
+## 其他工具
+
+### NodeJS & NPM
+
+NodeJS 是一个 JavaScript 运行环境，让我们可以在电脑上运行 JavaScript （而不是浏览器里）。
+前端开发的很多框架都需要用到 NodeJS，我们在第二课的网页部署课程中也会用到这个工具，请在第二课前将工具安装好。
+
+NodeJS 的官网是 [https://nodejs.org/](https://nodejs.org/)，目前最新的长期支持（Long-Term Support, LTS）版本是 `20.12.0`。
+大多数的框架都对长期支持版本有更好的适配，因此我们建议大家下载最新的 LTS 版本（即 `20.12.0`），而不是最新版（即 `21.7.1`）。
+
+### Git & Github (Optional)
+
+Git 是一个版本管理工具，用于管理版本~~（废话）~~。虽然我们在本课程中不会涉及到 Git 相关的内容，但是笔者诚挚建议大家学习使用 Git，这对将来的开发工作很有帮助。
+
+Git 的官网在 [https://git-scm.com/](https://git-scm.com/)，使用 `Linux` 发行版或者 `macOS` 的同学可以使用 `brew` / `apt` / `yum` 等包管理器安装 `git`。
+
+Github 是世界上最大型的程序员交友网站（划掉），如果对开源工作有兴趣的话可以创建一个账号，以后可以将自己的项目放到 Github 上。
+
+网络上 Git 的教程比较多，笔者比较推荐以下的教程：
+
+- [Learn Git Branching](https://learngitbranching.js.org/?locale=zh_CN)：完成基础篇即可学会日常操作
