feat: add tag to handout item

--- a/src/content/handout/01-web-basic.mdx
+++ b/src/content/handout/01-web-basic.mdx
@@ -2,6 +2,7 @@
 title: HTML & CSS 基础
 chapter: 00-web-basic
 slug: web-basic
+tags: ['slide']
 ---
 
 import SlidevFrame from '../../components/SlidevFrame.astro'
