--- a/src/content/handout/02-deployting-website.mdx
+++ b/src/content/handout/02-deployting-website.mdx
@@ -2,6 +2,7 @@
 title: 部署一个网站
 chapter: 00-web-basic
 slug: website-deployment
+tags: ['slide']
 ---
 
 import SlidevFrame from '../../components/SlidevFrame.astro'
