--- a/src/content/handout/04-js-basic.mdx
+++ b/src/content/handout/04-js-basic.mdx
@@ -1,7 +1,7 @@
 ---
 title: JavaScript 基础
 chapter: 00-web-basic
-icon: 'mdi:language-html5'
+icon: 'mdi:language-javascript'
 slug: js-basic
 tags: ['slide']
 ---
