docs: change category of js-basic post

--- a/src/content/handout/04-js-basic.mdx
+++ b/src/content/handout/04-js-basic.mdx
@@ -1,6 +1,6 @@
 ---
 title: JavaScript 基础
-chapter: 00-web-basic
+chapter: 01-js-world
 icon: 'mdi:language-javascript'
 slug: js-basic
 tags: ['slide']
