refactor: rename demo project related slides and posts with prefix 10

--- a/src/content/handout/07-django-rest-framework.mdx
+++ b/src/content/handout/07-django-rest-framework.mdx
@@ -1,11 +1,11 @@
 ---
-title: Django 基础
+title: Django Rest Framework
 chapter: 02-django
 icon: 'mdi:language-python'
-slug: django-basic
+slug: django-rest-framework
 tags: ['slide']
 ---
 
 import SlidevFrame from '../../components/SlidevFrame.astro'
 
-<SlidevFrame name="lesson-05/" />
+<SlidevFrame name="lesson-06/" />
